# eventfold-es

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs
.github/workflows/: ci.yml
docs/: design.md
docs/prd/: 005-auto-generate-event-ids-status.md  005-auto-generate-event-ids-tickets.md  005-auto-generate-event-ids.md  006-source-device-stamping-status.md  006-source-device-stamping-tickets.md  006-source-device-stamping.md  007-inject-event-status.md  007-inject-event-tickets.md  007-inject-event.md  008-stream-enumeration-api-status.md  008-stream-enumeration-api-tickets.md  008-stream-enumeration-api.md  009-eventfold-db-backend-status.md  009-eventfold-db-backend-tickets.md  009-eventfold-db-backend.md  010-live-subscriptions-status.md  010-live-subscriptions-tickets.md  010-live-subscriptions.md  011-extract-eventfold-proto-crate.md  012-live-handle-position-channel-status.md  012-live-handle-position-channel-tickets.md  012-live-handle-position-channel.md  013-tls-and-bearer-token-auth-status.md  013-tls-and-bearer-token-auth-tickets.md  013-tls-and-bearer-token-auth.md  phase-1-core.md  phase-2-projections.md  (+2 more)
examples/: counter.rs
examples/crm/: .prettierrc  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/crm/capabilities/: default.json
examples/crm/src/: commands.rs  error.rs  lib.rs  projections.rs  state.rs  workflows.rs
examples/crm/src-frontend/: .gitignore  index.html
examples/crm/src-frontend/src/: App.tsx  index.css  main.tsx
examples/crm/src-frontend/src/api/: mutations.ts  queries.ts  types.ts
examples/crm/src-frontend/src/components/companies/: CompanyDetail.tsx  CompanyForm.tsx  CompanyList.tsx
examples/crm/src-frontend/src/components/contacts/: ContactDetail.tsx  ContactForm.tsx  ContactList.tsx
examples/crm/src-frontend/src/components/dashboard/: ActivityFeed.tsx  Dashboard.tsx  PipelineBoard.tsx
examples/crm/src-frontend/src/components/deals/: DealBoard.tsx  DealCard.tsx  DealDetail.tsx  DealForm.tsx
examples/crm/src-frontend/src/components/layout/: Sidebar.tsx  ThemeToggle.tsx
examples/crm/src-frontend/src/components/notes/: NoteCard.tsx  NoteForm.tsx  NoteList.tsx
examples/crm/src-frontend/src/components/shared/: Badge.tsx  Card.tsx  Currency.tsx  EmptyState.tsx  EntityRefs.tsx  Modal.tsx  SectionHeader.tsx
examples/crm/src-frontend/src/components/tasks/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
examples/crm/src-frontend/src/hooks/: useTheme.ts
examples/crm/src-frontend/src/lib/: constants.ts  format.ts
examples/crm/src/domain/: company.rs  contact.rs  deal.rs  mod.rs  note.rs  settings.rs  task.rs
examples/crm/tests/: integration.rs
src/: actor.rs  aggregate.rs  auth.rs  client.rs  command.rs  error.rs  event.rs  lib.rs  live.rs  process_manager.rs  projection.rs  snapshot.rs  storage.rs  store.rs
(+60 files in other folders)
