[package]
name = "eventfold-es"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
eventfold = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "test-util"] }
